# marathon-time-predictor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  athletes_20.csv  athletes_20_test.csv  clean_dataset.csv  clean_dataset_2.csv  create_deployment_model.py  create_optimized_deployment_model.py  deploy_test.py  deployment_model.pkl  deployment_model_metadata.json  docker-compose.yml  env.example  example_usage.py  filter_data.py  graph.py  marathon2_model.py  marathon_api.py  marathon_model.py  marathon_prediction.py  marathon_predictions_comparison_1.csv  pyproject.toml  raw-data-kaggle.csv  requirements-dev.txt  requirements.txt  scalingo.json  setup.py  startup.py  test_api_metrics.py  test_model_performance.py  test_predictions_results.csv  test_raw_data_performance.py
.github/workflows/: ci.yml
docs/: api.md
tests/: __init__.py  conftest.py  test_api.py  test_marathon_prediction.py
